# encrypted-zone-sdk

./: .bazelignore  .bazelrc  .clang-tidy  .gitignore  .gitlint  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .rustfmt.toml  .versionrc.json  BUILD.bazel  CHANGELOG.md  GEMINI.md  MODULE.bazel  README.md  WORKSPACE  buf.yaml  container_deps.bzl  devkit.json  grpc_python_versions.patch
.devkit/: .codespellrc  .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  README.md  devkit.json
.devkit/.github/workflows/: build-debian.yaml  build-rockylinux.yaml  build.yaml  pre-commit.yaml  scorecard.yaml
.devkit/devkit/: bep  bootstrap  clion_ide  coverage  goland_ide  intellij_ide  pycharm_ide  vendor  vscode_ide  vscode_server
.devkit/docs/: devkit_json.md
.devkit/docs/help/: bep.txt  bootstrap.txt  coverage.txt
.devkit/images/: build-env-debian.Dockerfile  build-env-rockylinux.Dockerfile  build-env.Dockerfile  dev-env.Dockerfile  tool-env.Dockerfile  vscode-ide.Dockerfile
.devkit/scripts/: bep.py  bootstrap.py  build_and_run  coverage_report.py  docker_run  docker_run.py  entrypoint_docker  find_project_root.py  gcloud_setup  lib_logging.sh  list_external_mounts.py  test_bep.py  test_bootstrap.py  test_bootstrap_templating.py  test_coverage_report.py  test_list_external_mounts.py
.gemini/: settings.json
.github/: CODEOWNERS
core/cpp/: BUILD.bazel
core/cpp/src/: create_fileshare_response.h  ez_isolate_bridge_server.cpp  ez_isolate_bridge_server.h  isolate_ez_bridge_client.cpp  isolate_ez_bridge_client.h  mem_share_response.h  utils.h
core/cpp/test/: ez_isolate_bridge_server_test.cc  isolate_ez_bridge_client_test.cc  mock_isolate_ez_bridge_client.h  mock_isolate_rpc_service.h
core/rust/: BUILD.bazel
core/rust/macros/: lib.rs
core/rust/src/: isolate_ez_bridge_client.rs  isolate_server.rs  lib.rs  otel.rs  rpc_dispatcher.rs  rpc_handler.rs  utils.rs
core/rust/test/: isolate_client_test.rs  isolate_server_test.rs  test_utils.rs  utils_test.rs
core/rust/test/proto/: BUILD.bazel  test_message.proto
docs/: get-started.md
enforcer/: BUILD.bazel  ez_manifest.proto
enforcer/diagnostics/v1/: BUILD.bazel  buf.yaml  diagnostics_service.proto  pprof_service.proto  tokio_diagnostics.proto
enforcer/v1/: BUILD.bazel  buf.yaml  data_scope_type.proto  error_detail.proto  ez_data_scope.proto  ez_external_proxy_service.proto  ez_isolate_bridge.proto  ez_manifest.proto  ez_mtls.proto  ez_payload.proto  ez_service.proto  ez_to_ez_service.proto  isolate_bridge.proto  isolate_data_scope.proto  isolate_ez_bridge.proto  isolate_health.proto  isolate_state.proto  options.proto  status.proto
examples/fileshare/: BUILD.bazel  fileshare_manifest.json  receiver.cc  sender.cc
examples/fileshare/proto/: BUILD.bazel  fileshare.proto
examples/helloworld/main/: BUILD.bazel  ez_manifest.json  helloworld.cc  helloworld_async_test.cc
examples/helloworld/proto/: BUILD.bazel  custom_templates.bzl  greeter.proto
examples/helloworld/proto/custom_templates/: BUILD.bazel  cpp_custom.tmpl  hpp_custom.tmpl
examples/helloworld_edition/: main
examples/helloworld_rust/: BUILD.bazel  ez_manifest.json  helloworld.rs
examples/summation_by_lookup_table_with_backend/benches/: BUILD.bazel  summation_bench_client.rs
examples/summation_by_lookup_table_with_backend/client/: BUILD.bazel
examples/summation_by_lookup_table_with_backend/client/src/: lib.rs  main.rs
examples/summation_by_looping_monolithic_server/proto/: BUILD.bazel
examples/summation_by_looping_monolithic_server/server/: BUILD.bazel  summation_by_looping_monolithic_server.cc  summation_by_looping_monolithic_server_manifest.json
examples/summation_by_looping_with_backend/: benches  client
examples/summation_by_looping_with_backend/proto/: BUILD.bazel  arithmetic_backend.proto  summation.proto
examples/summation_by_looping_with_backend/server/cpp/: BUILD.bazel  summation_arithmetic_backend.cc  summation_arithmetic_backend.json  summation_by_looping_with_backend.cc  summation_by_looping_with_backend_manifest.json
functionaltest-system/: CHANGELOG.md  Dockerfile
functionaltest-system/bazel/: BUILD.bazel  ghz_test_runner  rpc_test.bzl  rpc_test_runner
functionaltest-system/tests/: functest-image.yaml
functionaltest-system/tools/: get_workspace_status
testing/docker-compose-hermetic/: .env  BUILD.bazel  README.md  docker-compose.yaml.template  lib_tests.sh  run-test  testrunner.textproto.template
testing/docker-compose-hermetic/test_cases/: BUILD.template  reply.filter.jq  rpc_test.bzl  summation_by_looping_with_backend_rust  test_configs.json  verify_report.sh
testing/docker-compose-hermetic/test_cases/helloworld/: ezhello.pre-filter.jq  ezhello.reply.textproto  ezhello.request.textproto  foobarhello.pre-filter.jq  foobarhello.reply.textproto  foobarhello.request.textproto
testing/docker-compose-hermetic/test_cases/summation_by_lookup_table_with_backend/: fiftysequence.filter.jq  fiftysequence.pre-filter.jq  fiftysequence.reply.textproto  fiftysequence.request.textproto  hundredsequence.pre-filter.jq  hundredsequence.reply.textproto  hundredsequence.request.textproto
testing/local/: BUILD.bazel  README.md  greeter_config.json  mock_enforcer.cc  mock_enforcer.h  stream_bridge.cc  summation_config.json  test_isolate
toolchains/: BUILD.bazel
tools/: collect-test-logs  decode_ez_request  encode_ez_request
tools/commit_wrapper_hook/: commit_wrapper.sh  prepare-commit-msg-hook
tools/plugin/: BUILD.bazel  cc_ez_sdk.bzl  ez_sdk.bzl  ez_sdk.go  ez_sdk.py  go.mod  go.sum  protoc-gen-doc.patch  protoc_template_plugin.go  requirements.in  requirements_lock.txt  rs_ez_sdk.bzl
tools/plugin/ez_protoc/: ez_plugin.bzl  ez_protoc.bzl  filter_files.bzl
tools/plugin/internal/: ez_sdk.bzl
tools/plugin/tmpl/: BUILD.bazel  client_reader_writer.h.jinja2  grpc.pb.h.jinja2  hpp_client_reader_writer.tmpl  hpp_grpc_pb.tmpl  hpp_server_reader_writer.tmpl  isolate_rpc_service.rs.jinja2  isolate_stub.rs.jinja2  lib.rs.jinja2  rs_isolate_rpc_service.tmpl  rs_isolate_stub.tmpl  rs_lib.tmpl  server_reader_writer.h.jinja2
(+34 files in other folders)
