# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "ez_isolate_bridge",
    srcs = [
        "src/ez_isolate_bridge_server.cpp",
        "src/isolate_ez_bridge_client.cpp",
    ],
    hdrs = [
        "src/ez_isolate_bridge_server.h",
        "src/isolate_ez_bridge_client.h",
        "src/mem_share_response.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/v1:enforcer_cc_proto",
        "//enforcer/v1:enforcer_grpc_proto",
        "@com_google_absl//absl/base:no_destructor",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@grpc//:grpc++",
        "@grpc//:grpc_security_base",
    ],
)

cc_library(
    name = "mock_isolate_ez_bridge_client",
    testonly = True,
    hdrs = ["test/mock_isolate_ez_bridge_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":ez_isolate_bridge",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "mock_isolate_rpc_service",
    testonly = True,
    hdrs = ["test/mock_isolate_rpc_service.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":ez_isolate_bridge",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "isolate_ez_bridge_client_test",
    srcs = ["test/isolate_ez_bridge_client_test.cc"],
    deps = [
        ":ez_isolate_bridge",
        ":mock_isolate_ez_bridge_client",
        "//enforcer/v1:enforcer_grpc_proto",
        "@com_google_absl//absl/time",
        "@com_google_googletest//:gtest",
        "@grpc//:grpc++",
    ],
)

cc_test(
    name = "ez_isolate_bridge_server_test",
    srcs = ["test/ez_isolate_bridge_server_test.cc"],
    deps = [
        ":ez_isolate_bridge",
        ":mock_isolate_rpc_service",
        "//enforcer/v1:enforcer_grpc_proto",
        "@com_google_googletest//:gtest",
        "@grpc//:grpc++",
    ],
)
