# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_descriptor_set")
load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_grpc_library")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

package(default_visibility = ["//visibility:public"])

go_importpath = "github.com/privacysandbox/ez/sdk/v1"

proto_library(
    name = "options_proto",
    srcs = [
        "options.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":data_scope_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)

buf_lint_test(
    name = "options_lint",
    size = "small",
    config = "//:buf.yaml",
    targets = [":options_proto"],
)

cc_proto_library(
    name = "options_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":options_proto"],
)

go_proto_library(
    name = "options_go_proto",
    importpath = go_importpath,
    protos = [
        ":data_scope_proto",
        ":options_proto",
    ],
    visibility = ["//visibility:public"],
)

proto_descriptor_set(
    name = "options_descriptor_set",
    visibility = ["//visibility:public"],
    deps = [":options_proto"],
)

proto_library(
    name = "data_scope_proto",
    srcs = [
        "data_scope_type.proto",
        "ez_data_scope.proto",
    ],
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "data_scope_lint",
    size = "small",
    config = "//:buf.yaml",
    targets = [":data_scope_proto"],
)

proto_library(
    name = "enforcer_proto",
    srcs = [
        "ez_isolate_bridge.proto",
        "ez_payload.proto",
        "ez_service.proto",
        "isolate_bridge.proto",
        "isolate_data_scope.proto",
        "isolate_ez_bridge.proto",
        "isolate_health.proto",
        "isolate_state.proto",
        "status.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [":data_scope_proto"],
)

buf_lint_test(
    name = "enforcer_lint",
    size = "small",
    config = "//:buf.yaml",
    targets = [":enforcer_proto"],
)

cc_proto_library(
    name = "data_scope_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":data_scope_proto"],
)

cc_proto_library(
    name = "enforcer_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":enforcer_proto"],
)

proto_descriptor_set(
    name = "enforcer_descriptor_set",
    visibility = ["//visibility:public"],
    deps = [":enforcer_proto"],
)

rust_prost_library(
    name = "enforcer_rust",
    proto = ":enforcer_proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "data_scope_rust",
    proto = ":data_scope_proto",
    visibility = ["//visibility:public"],
)

cpp_grpc_library(
    name = "enforcer_grpc_proto",
    protos = [":enforcer_proto"],
    visibility = ["//visibility:public"],
    deps = [":data_scope_grpc_proto"],
)

cpp_grpc_library(
    name = "data_scope_grpc_proto",
    protos = [":data_scope_proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "external_proxy_proto",
    srcs = [
        "ez_external_proxy_service.proto",
    ],
)

proto_library(
    name = "ez_to_ez_service_proto",
    srcs = [
        "ez_to_ez_service.proto",
    ],
    deps = [
        "//enforcer/v1:enforcer_proto",
    ],
)

buf_lint_test(
    name = "external_proxy_lint",
    size = "small",
    config = "//:buf.yaml",
    targets = [":external_proxy_proto"],
)

cc_proto_library(
    name = "external_proxy_cc_proto",
    deps = [":external_proxy_proto"],
)

cpp_grpc_library(
    name = "external_proxy_grpc_proto",
    protos = [":external_proxy_proto"],
)

buf_lint_test(
    name = "ez_to_ez_service_lint",
    size = "small",
    config = "//:buf.yaml",
    targets = [":ez_to_ez_service_proto"],
)

rust_prost_library(
    name = "ez_to_ez_service_rust",
    proto = ":ez_to_ez_service_proto",
    visibility = ["//visibility:public"],
)
