# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@oak//bazel:defs.bzl", "oci_runtime_bundle")
load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

cc_binary(
    name = "sender",
    srcs = ["sender.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//core/cpp:ez_isolate_bridge",
        "//examples/fileshare/proto:fileshare_grpc_proto",
        "//examples/fileshare/proto:fileshare_service",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_binary(
    name = "receiver",
    srcs = ["receiver.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//core/cpp:ez_isolate_bridge",
        "//examples/fileshare/proto:fileshare_grpc_proto",
        "//examples/fileshare/proto:fileshare_service",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/synchronization",
    ],
)

pkg_tar(
    name = "fileshare_tar",
    srcs = [
        ":receiver",
        ":sender",
    ],
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "fileshare_image",
    base = "@isolate_runtime_ubuntu_base",
    tars = [":fileshare_tar"],
)

oci_runtime_bundle(
    name = "fileshare_bundle",
    image = ":fileshare_image",
    visibility = ["//visibility:public"],
)

exports_files(["fileshare_manifest.json"])
