# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@oak//bazel:defs.bzl", "oci_runtime_bundle")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//:container_deps.bzl", "get_user")
load("//tools/plugin:ez_sdk.bzl", "ez_isolate_service_rs")

ez_isolate_service_rs(
    name = "helloworld_service",
    crate_name = "ez_isolate_bridge_sdk",
    proto_basename = "greeter",
    protos = ["//examples/helloworld/proto:greeter_proto"],
    rust_protos = ["//examples/helloworld/proto:greeter_rust"],
)

rust_binary(
    name = "helloworld",
    srcs = ["helloworld.rs"],
    crate_name = "greeter",
    edition = "2021",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":helloworld_service",
        "//examples/helloworld/proto:greeter_rust",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
    ],
)

pkg_files(
    name = "helloworld_bin",
    srcs = [":helloworld"],
    attributes = pkg_attributes(mode = "0500"),
    prefix = "/usr/local/bin",
)

user = get_user(user = "root")

pkg_tar(
    name = "helloworld_tar",
    srcs = [":helloworld_bin"],
    owner = "{}.{}".format(
        user.uid,
        user.gid,
    ),
)

oci_image(
    name = "helloworld_image",
    base = "@isolate_runtime_ubuntu_base",
    tars = [":helloworld_tar"],
)

oci_runtime_bundle(
    name = "helloworld_bundle",
    image = ":helloworld_image",
    visibility = ["//visibility:public"],
)
