# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("//tools/plugin/ez_protoc:ez_plugin.bzl", "ez_plugin")
load("//tools/plugin/internal:ez_sdk.bzl", "default_templates_dir", "get_all_ez_sdk_plugins", "get_all_ez_server_bridge_plugins")

py_binary(
    name = "ez_sdk_plugin",
    srcs = ["ez_sdk.py"],
    main = "ez_sdk.py",
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/v1:options_py_proto",
        "@pypi//jinja2",
        "@pypi//protobuf",
    ],
)

[
    ez_plugin(
        name = plugin.name,
        outputs = plugin.outputs,
        templates = default_templates_dir,
        visibility = ["//visibility:public"],
    )
    for plugin in get_all_ez_sdk_plugins() + get_all_ez_server_bridge_plugins()
]

# To re-freeze dependencies after changing requirements.in, run: devkit/build bazel run //tools/plugin:requirements.update
compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)
