# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_grpc_library")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

exports_files(["buf.yaml"])

proto_library(
    name = "diagnostics_proto",
    srcs = [
        "diagnostics_service.proto",
        "pprof_service.proto",
        "tokio_diagnostics.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

cc_proto_library(
    name = "diagnostics_cc_proto",
    deps = [":diagnostics_proto"],
)

cpp_grpc_library(
    name = "diagnostics_grpc_proto",
    protos = [":diagnostics_proto"],
)

buf_lint_test(
    name = "diagnostics_lint",
    size = "small",
    config = ":buf.yaml",
    targets = [":diagnostics_proto"],
)

rust_prost_library(
    name = "diagnostics_rust",
    proto = ":diagnostics_proto",
    visibility = ["//visibility:public"],
)
